# time-diagnostics

./: .gitmodules  CMakeLists.txt  README.md  identities.h  keywords.txt  library.properties  time_diagnostics.h  time_diagnostics_runner.cpp
cmake/: ArduinoToolchain.cmake
examples/advanced_time_diagnostics/: advanced_time_diagnostics.ino
examples/basic_time_diagnostics/: basic_time_diagnostics.ino
src/: identities.h  serial_printf.cpp  time_diagnostics.h  time_post_receiver.h  timer.cpp  timer.h
src/internal/: time_post_receiver.h  timer.cpp  timer.h
tests/: disable_time_diagnostics_tests.cpp  disable_time_diagnostics_tests.h  fake_time_receiver.h  minunit.h  serial_printf.cpp  serial_printf.h  time_diagnostics_tests.cpp  time_diagnostics_tests.h  timer_tests.cpp  timer_tests.h
